Several more fixes to styles, added code to track size of the window in the map.
Made everything in the search menu not clickable, since it looks weird in mobile. Some other changes were to fix the sizing of the map.

--- a/public/menu-styles.css
+++ b/public/menu-styles.css
@@ -10,6 +10,8 @@
 
 #app {
     flex: 1 1 auto;
+    position: relative;
+    height: 100%;
 }
 
 
